[package]
name = "gameboy-emulator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
sdl3 = "0.14.42"
imgui = { version = "0.12.0", features = ["tables-api"]}
imgui-sdl3-support = "0.13.0"

[dependencies.imgui-sdl3-renderer]
git = "https://github.com/masonjmj/imgui-rs-sdl3-renderer"
version = "0.2.0"
