[package]
name = "gameboy-emulator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
sdl3 = "0.17.3"
imgui = { version = "0.12.0", features = ["tables-api"]}
sdl3-sys = { version = "0.6.1", features = ["build-from-source"] }

[dependencies.imgui-sdl3-support]
git = "https://github.com/Pyr0de/imgui-sdl3-support"
rev = "bff377e"
version = "0.13.0"

[dependencies.imgui-sdl3-renderer]
git = "https://github.com/Pyr0de/imgui-rs-sdl3-renderer"
rev = "1054cf5"
version = "0.2.0"
